@@ -15,7 +15,7 @@ inputs:
     default: false
   # conda-installed min dependencies
   biopython:
-    default: 'biopython'
+    default: 'biopython>=1.80'
   codecov:
     default: 'codecov'
   cython:
